@@ -392,7 +392,9 @@ public final class ProcessTools {
 
         final List<String> doubleWordArgs = List.of(
                 "--add-opens", "--upgrade-module-path", "--add-modules", "--add-exports", "--enable-native-access",
-                "--limit-modules", "--add-reads", "--patch-module", "--module-path", "-p");
+                "--limit-modules", "--add-reads", "--patch-module", "--module-path", "-p",
+                "--enable-final-field-mutation", "--illegal-native-access", "--illegal-final-field-mutation",
+                "--sun-misc-unsafe-memory-access", "--finalization");
 
         ArrayList<String> args = new ArrayList<>();
 
@@ -575,7 +577,7 @@ public final class ProcessTools {
      * "test.vm.opts" and "test.java.opts"</b> and this method will
      * not do that.
      *
-     * <p>If you still chose to use
+     * <p>If you still choose to use
      * createLimitedTestJavaProcessBuilder() you should probably use
      * it in combination with <b>@requires vm.flagless</b> JTREG
      * anotation as to not waste energy and test resources.
@@ -609,7 +611,7 @@ public final class ProcessTools {
      * "test.vm.opts" and "test.java.opts"</b> and this method will
      * not do that.
      *
-     * <p>If you still chose to use
+     * <p>If you still choose to use
      * createLimitedTestJavaProcessBuilder() you should probably use
      * it in combination with <b>@requires vm.flagless</b> JTREG
      * anotation as to not waste energy and test resources.
